# atsame-example

./: Cargo.toml  README.md  flake.nix  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
contrib/: flake.nix
src/: main.rs
