[package]
name = "atsamd-demo"
version = "0.1.0"
authors = ["Henrik Tjäder <henrik@grepit.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.rtic-scope]
pac_name = "atsamd51n"
pac_features = []
pac_version = "0.11"
interrupt_path = "atsamd51n::Interrupt"
tpiu_freq = 16000000
tpiu_baud = 115200
dwt_enter_id = 1
dwt_exit_id = 2
lts_prescaler = 1
expect_malformed = true

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.3"
cortex-m-rtic = "1.0.0"

[dependencies.atsamd-hal]
git = "https://github.com/vcchtjader/atsamd.git"
branch = "clocking-api-v2"
#path = "../atsamd-bradley/hal/"
version = "0.13.0"
features = ["same51n-rt", "unproven"]

[profile.release]
debug = true
lto = true
