[package]
name = "rtic-scope-atsame-example"
version = "0.1.0"
authors = ["Viktor Sonesten <viktor.sonesten@grepit.se>", "Henrik Tjäder <henrik@grepit.se>"]
edition = "2018"

[package.metadata.rtic-scope]
pac_name = "atsamd51n"
pac_features = []
pac_version = "0.11"
interrupt_path = "atsamd51n::Interrupt"
tpiu_freq = 12000000
tpiu_baud = 1000000
dwt_enter_id = 1
dwt_exit_id = 2
lts_prescaler = 1
expect_malformed = false

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.3"
cortex-m-rtic = "1.0.0"

[dependencies.atsamd-hal]
git = "https://github.com/atsamd-rs/atsamd.git" # for InterruptNumber trait
version = "0.14.0"
features = ["same51n-rt", "unproven"]

[dependencies.cortex-m-rtic-trace]
git = "https://github.com/rtic-scope/cargo-rtic-scope"
branch = "v0.3.x"

[profile.release]
debug = true
lto = true

[patch.crates-io]
cortex-m = { git = "https://github.com/rtic-scope/cortex-m.git", branch = "rtic-scope" }
